plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springdoc.openapi-gradle-plugin' version '1.9.0'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/libs-release' }
}

configurations {
    mockitoAgent
}

dependencies {
    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Security & OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JWT (JJWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // JPA + PostgreSQL + Flyway
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // QueryDSL — OpenFeign fork (Spring Boot 4 / Spring Data 4 지원)
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // API 문서 (Swagger UI) — Spring Boot 4 호환 버전
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    // Email (알림 도메인) — 구현 시 활성화
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // MQTT (알림 도메인) — 구현 시 활성화
    implementation 'org.springframework.integration:spring-integration-mqtt'
    implementation 'org.eclipse.paho:org.eclipse.paho.mqttv5.client:1.2.5'

    // Actuator (Prometheus 연동)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'me.paulschwarz:springboot4-dotenv:5.1.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    mockitoAgent('org.mockito:mockito-core') { transitive = false }

    // Testcontainers — testcontainers 2.x 좌표
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testImplementation 'org.testcontainers:testcontainers-jdbc'
    testImplementation 'org.testcontainers:testcontainers'   // Redis GenericContainer용

}

// QueryDSL Q클래스 생성 경로
def querydslDir = layout.buildDirectory.dir('generated/querydsl')

sourceSets {
    main {
        java {
            srcDirs += [querydslDir]
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory = querydslDir
}


tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'scenario', 'external'
    }
    jvmArgs "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.register('externalTest', Test) {
    description = '외부 I/O 테스트 (Toss, SMTP, MQTT) — 수동 실행 전용'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'external'
    }
    jvmArgs "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.register('scenarioTest', Test) {
    description = '시나리오(E2E) 테스트 — Testcontainers 기반, 로컬 및 CI 실행'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'scenario'
    }
    jvmArgs "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.register('localTest') {
    description = '단위+통합+시나리오 테스트 전체 실행 — 로컬 개발용'
    group = 'verification'
    dependsOn 'test', 'scenarioTest'
}

// OpenAPI 스펙 export 설정
openApi {
    apiDocsUrl = 'http://localhost:8080/v3/api-docs'
    outputDir = layout.buildDirectory.dir('api-spec')
    outputFileName = 'openapi.json'
    waitTimeInSeconds = 30
}

// openapi.json → docs-export.html (standalone, 외부 공유용)
tasks.register('generateApiDocs') {
    dependsOn 'generateOpenApiDocs'
    description = 'openapi.json을 embed한 standalone docs-export.html 생성 (외부 공유용)'

    def specFile    = layout.buildDirectory.file('api-spec/openapi.json')
    def templateFile = layout.projectDirectory.file('gradle/docs-export-template.html')
    def outputFile  = layout.projectDirectory.file('docs/docs-export.html')

    inputs.file(specFile)
    inputs.file(templateFile)
    outputs.file(outputFile)

    doLast {
        def specJson = specFile.get().asFile.text.replace('</', '<\\/')
        outputFile.asFile.text = templateFile.asFile.text.replace('{{SPEC}}', specJson)
    }
}


